Update HidesMembersPluginRegistrar.kt
修改选择可用更高jdk版本